--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -5,3 +5,19 @@
   flex-direction: column;
   background-color: field;
 }
+
+.bodyContainer {
+  display: flex;
+  flex-direction: column;
+  height: 92%;
+  overflow-y: scroll;
+  margin-top: 20px;
+}
+
+.listContainer {
+  height: 500px;
+}
+
+.listContainer h2 {
+  padding-left: 20px;
+}
