--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,6 +1,7 @@
 .headerContainer {
   background-color: black;
   height: 8%;
+  min-height: 100px;
   display: flex;
   align-items: center;
   padding: 0px 15px;
