--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -12,12 +12,34 @@
   height: 92%;
   overflow-y: scroll;
   margin-top: 20px;
+  row-gap: 80px;
+  padding-bottom: 60px;
+}
+
+.categoryContainer {
+  height: 30%;
+  min-height: 390px;
+  margin-top: 15px;
+}
+
+.categoryContainer h2 {
+  padding-left: 20px;
+  font-size: 2rem;
 }
 
 .listContainer {
-  height: 500px;
+  height: 100%;
+  display: flex;
+  overflow-x: scroll;
+  column-gap: 20px;
+  padding: 0px 10px;
+  margin-top: 25px;
+  padding-bottom: 5px;
 }
 
-.listContainer h2 {
-  padding-left: 20px;
+.listContainer li {
+  height: 100%;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
 }
