--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -7,6 +7,7 @@
   padding: 0px 15px;
   color: rgb(172, 19, 19);
   justify-content: space-between;
+  position: relative;
 }
 
 .headerLogo {
@@ -41,4 +42,66 @@
   background-color: rgb(56, 56, 56);
   width: 40%;
   transition: 0.3s;
+}
+
+span {
+  display: none;
+}
+
+nav {
+  display: none;
+}
+
+@media screen and (max-width: 430px) {
+  .headerContainer {
+    position: relative;
+  }
+
+  span {
+    display: block;
+    font-size: 3rem;
+    color: white;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .headerContainer input {
+    display: none;
+  }
+
+  .headerContainer button {
+    display: none;
+  }
+
+  nav {
+    background-color: black;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100vw;
+    height: 30vh;
+    margin-bottom: 40px;
+  }
+
+  .mobileOptions {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .mobileOptions input {
+    display: block;
+    height: 30%;
+    width: 70%;
+  }
+
+  .mobileOptions input:focus {
+    width: 90%;
+  }
+
+  .mobileOptions button {
+    display: block;
+  }
 }
