--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -10,6 +10,10 @@
   position: relative;
 }
 
+.headerContainer h1 {
+  font-size: 2.4rem;
+}
+
 .headerLogo {
   cursor: pointer;
 }
@@ -55,6 +59,11 @@ nav {
 @media screen and (max-width: 430px) {
   .headerContainer {
     position: relative;
+    width: 100vw;
+  }
+
+  .headerContainer h1 {
+    font-size: 2.2rem;
   }
 
   span {
