--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -3,7 +3,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: field;
+  background-color: rgb(18, 18, 18);
 }
 
 .bodyContainer {
