--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -43,3 +43,8 @@
   display: flex;
   align-items: center;
 }
+@media screen and (max-width: 440px) {
+  h2.header {
+    font-size: 1.5rem;
+  }
+}
