--- a/src/pages/series/series.module.css
+++ b/src/pages/series/series.module.css
@@ -43,3 +43,9 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 440px) {
+  h2.header {
+    font-size: 1.5rem;
+  }
+}
